kratos/external_libraries/gidpost/source/gidpost.h

  
typedef enum { 
  GiD_PostAscii=0, 
  GiD_PostAsciiZipped, 
  GiD_PostBinary,
  GiD_PostHDF5
} GiD_PostMode;
typedef enum { GiD_2D = 2, GiD_3D = 3 } GiD_Dimension;
typedef enum {
  GiD_NoElement = 0,
  GiD_Point,
  GiD_Linear,
  GiD_Triangle,
  GiD_Quadrilateral,
  GiD_Tetrahedra,
  GiD_Hexahedra,
  GiD_Prism,
  GiD_Pyramid,
  GiD_Sphere,
  GiD_Circle
} GiD_ElementType;
typedef enum {
  GiD_Scalar = 0,
  GiD_Vector,
  GiD_Matrix,
  GiD_PlainDeformationMatrix,
  GiD_MainMatrix,
  GiD_LocalAxes,
  GiD_ComplexScalar,
  GiD_ComplexVector
} GiD_ResultType;
typedef enum { GiD_OnNodes=0, GiD_OnGaussPoints } GiD_ResultLocation;
typedef unsigned int GiD_FILE;
GIDPOST_API int GiD_PostInit();
GIDPOST_API int GiD_PostDone();
GIDPOST_API
int GiD_OpenPostMeshFile(GP_CONST char * FileName,
		          GiD_PostMode Mode );
GIDPOST_API
GiD_FILE GiD_fOpenPostMeshFile(GP_CONST char * FileName,
		               GiD_PostMode Mode );
GIDPOST_API
int GiD_ClosePostMeshFile();
GIDPOST_API
int GiD_fClosePostMeshFile(GiD_FILE fd);
GIDPOST_API
int GiD_BeginMesh(GP_CONST char * MeshName,
		  GiD_Dimension Dim, GiD_ElementType EType,
		  int NNode);
GIDPOST_API
int GiD_fBeginMesh(GiD_FILE fd, GP_CONST char * MeshName,
		   GiD_Dimension Dim, GiD_ElementType EType,
		   int NNode );
GIDPOST_API
int GiD_BeginMeshColor(GP_CONST char * MeshName,
		       GiD_Dimension Dim, GiD_ElementType EType,
		       int NNode,
		       double Red, double Green, double Blue);
GIDPOST_API
int GiD_fBeginMeshColor(GiD_FILE fd, GP_CONST char * MeshName,
		        GiD_Dimension Dim, GiD_ElementType EType,
		        int NNode,
		        double Red, double Green, double Blue);
GIDPOST_API
int GiD_EndMesh();
GIDPOST_API
int GiD_fEndMesh(GiD_FILE fd);
GIDPOST_API
int GiD_MeshUnit(GP_CONST char * UnitName);
GIDPOST_API
int GiD_fMeshUnit(GiD_FILE fd,GP_CONST char * UnitName);
GIDPOST_API
int GiD_BeginCoordinates();
GIDPOST_API
int GiD_fBeginCoordinates(GiD_FILE fd);
GIDPOST_API
int GiD_EndCoordinates();
GIDPOST_API
int GiD_fEndCoordinates(GiD_FILE fd);
GIDPOST_API
int GiD_BeginMeshGroup( GP_CONST char* Name );
GIDPOST_API
int GiD_fBeginMeshGroup( GiD_FILE fd, GP_CONST char* Name );
GIDPOST_API
int GiD_EndMeshGroup();
GIDPOST_API
int GiD_fEndMeshGroup(GiD_FILE fd);
GIDPOST_API
int GiD_WriteCoordinates(int id, double x, double y, double z);
GIDPOST_API
int GiD_fWriteCoordinates(GiD_FILE fd, int id, double x, double y, double z);
GIDPOST_API
int GiD_WriteCoordinates2D(int id, double x, double y);
GIDPOST_API
int GiD_fWriteCoordinates2D(GiD_FILE fd, int id, double x, double y);
GIDPOST_API
int GiD_BeginElements();
GIDPOST_API
int GiD_fBeginElements(GiD_FILE fd);
GIDPOST_API
int GiD_EndElements();
GIDPOST_API
int GiD_fEndElements(GiD_FILE fd);
GIDPOST_API
int GiD_WriteElement(int id, int nid[]);
GIDPOST_API
int GiD_fWriteElement(GiD_FILE fd, int id, int nid[]);
GIDPOST_API
int GiD_WriteElementMat(int id, int nid[]);
GIDPOST_API
int GiD_fWriteElementMat(GiD_FILE fd, int id, int nid[]);
GIDPOST_API
int GiD_WriteSphere(int id, int nid, double r);
GIDPOST_API
int GiD_fWriteSphere(GiD_FILE fd, int id, int nid, double r);
GIDPOST_API
int GiD_WriteSphereMat(int id, int nid, double r, int mat);
GIDPOST_API
int GiD_fWriteSphereMat(GiD_FILE fd, int id, int nid, double r, int mat);
GIDPOST_API
int GiD_WriteCircle(int id, int nid, double r,
		    double nx, double ny, double nz);
GIDPOST_API
int GiD_fWriteCircle(GiD_FILE fd, int id, int nid, double r,
		     double nx, double ny, double nz);
GIDPOST_API
int GiD_WriteCircleMat(int id, int nid, double r,
		       double nx, double ny, double nz, int mat);
GIDPOST_API
int GiD_fWriteCircleMat(GiD_FILE fd, int id, int nid, double r,
		        double nx, double ny, double nz, int mat);
GIDPOST_API
int GiD_OpenPostResultFile(GP_CONST char * FileName, GiD_PostMode Mode);
GIDPOST_API
GiD_FILE GiD_fOpenPostResultFile(GP_CONST char * FileName, GiD_PostMode Mode);
GIDPOST_API
int GiD_ClosePostResultFile();
GIDPOST_API
int GiD_fClosePostResultFile(GiD_FILE fd);
GIDPOST_API
int GiD_BeginGaussPoint(GP_CONST char * name, GiD_ElementType EType,
		        GP_CONST char * MeshName,
		        int GP_number, int NodesIncluded, int InternalCoord);
GIDPOST_API
int GiD_fBeginGaussPoint(GiD_FILE fd, GP_CONST char * name,
		         GiD_ElementType EType,
		         GP_CONST char * MeshName,
		         int GP_number, int NodesIncluded, int InternalCoord);
GIDPOST_API
int GiD_EndGaussPoint();
GIDPOST_API
int GiD_fEndGaussPoint(GiD_FILE fd);
GIDPOST_API
int GiD_WriteGaussPoint2D(double x, double y);
GIDPOST_API
int GiD_fWriteGaussPoint2D(GiD_FILE fd, double x, double y);
GIDPOST_API
int GiD_WriteGaussPoint3D(double x, double y, double z);
GIDPOST_API
int GiD_fWriteGaussPoint3D(GiD_FILE fd, double x, double y, double z);
GIDPOST_API
int GiD_BeginRangeTable(GP_CONST char * name);
GIDPOST_API
int GiD_fBeginRangeTable(GiD_FILE fd, GP_CONST char * name);
GIDPOST_API
int GiD_EndRangeTable();
GIDPOST_API
int GiD_fEndRangeTable(GiD_FILE fd);
GIDPOST_API
int GiD_WriteMinRange(double max, GP_CONST char * name);
GIDPOST_API
int GiD_fWriteMinRange(GiD_FILE fd, double max, GP_CONST char * name);
GIDPOST_API
int GiD_WriteRange(double min, double max, GP_CONST char * name);
GIDPOST_API
int GiD_fWriteRange(GiD_FILE fd, double min, double max, GP_CONST char * name);
GIDPOST_API
int GiD_WriteMaxRange(double min, GP_CONST char * name);
GIDPOST_API
int GiD_fWriteMaxRange(GiD_FILE fd, double min, GP_CONST char * name);
GIDPOST_API
int GiD_BeginResult(GP_CONST char * Result, GP_CONST char * Analysis,
		    double step,
		    GiD_ResultType Type, GiD_ResultLocation Where,
		    GP_CONST char * GaussPointsName,
		    GP_CONST char * RangeTable, 
		    int compc, GP_CONST char * compv[]);
GIDPOST_API
int GiD_fBeginResult(GiD_FILE fd, GP_CONST char * Result,
		     GP_CONST char * Analysis,
		     double step,
		     GiD_ResultType Type, GiD_ResultLocation Where,
		     GP_CONST char * GaussPointsName,
		     GP_CONST char * RangeTable, 
		     int compc, GP_CONST char * compv[]);
GIDPOST_API
int GiD_BeginResultHeader(GP_CONST char * Result, GP_CONST char * Analysis, 
		          double step,
		          GiD_ResultType Type, GiD_ResultLocation Where,
		          GP_CONST char * GaussPointsName);
GIDPOST_API
int GiD_fBeginResultHeader(GiD_FILE fd, GP_CONST char * Result,
		           GP_CONST char * Analysis, 
		           double step,
		           GiD_ResultType Type, GiD_ResultLocation Where,
		           GP_CONST char * GaussPointsName);
GIDPOST_API
int GiD_ResultComponents(int compc, GP_CONST char * compv[]);
GIDPOST_API
int GiD_fResultComponents(GiD_FILE fd, int compc, GP_CONST char * compv[]);
GIDPOST_API
int GiD_ResultUnit(GP_CONST char * UnitName);
GIDPOST_API
int GiD_fResultUnit(GiD_FILE fd, GP_CONST char * UnitName);
GIDPOST_API
int GiD_BeginResultGroup(GP_CONST char * Analysis, double step,
		         GiD_ResultLocation Where,
		         GP_CONST char * GaussPointsName);
GIDPOST_API
int GiD_fBeginResultGroup(GiD_FILE fd, GP_CONST char * Analysis, double step,
		          GiD_ResultLocation Where,
		          GP_CONST char * GaussPointsName);
GIDPOST_API
int GiD_ResultDescription(GP_CONST char * Result, GiD_ResultType Type);
GIDPOST_API
int GiD_fResultDescription(GiD_FILE fd, GP_CONST char * Result,
		           GiD_ResultType Type);
GIDPOST_API
int GiD_ResultValues();
GIDPOST_API
int GiD_fResultValues(GiD_FILE fd);
GIDPOST_API
int GiD_EndResult();
GIDPOST_API
int GiD_fEndResult(GiD_FILE fd);
GIDPOST_API
int GiD_BeginOnMeshGroup(char * Name);
GIDPOST_API
int GiD_fBeginOnMeshGroup(GiD_FILE fd, char * Name);
GIDPOST_API
int GiD_EndOnMeshGroup();
GIDPOST_API
int GiD_fEndOnMeshGroup(GiD_FILE fd);
GIDPOST_API
int GiD_FlushPostFile();
GIDPOST_API
int GiD_fFlushPostFile(GiD_FILE fd);
GIDPOST_API
int GiD_WriteScalar(int id, double v);
GIDPOST_API
int GiD_fWriteScalar(GiD_FILE fd, int id, double v);
GIDPOST_API
int GiD_Write2DVector(int id, double x, double y);
GIDPOST_API
int GiD_fWrite2DVector(GiD_FILE fd, int id, double x, double y);
GIDPOST_API
int GiD_WriteVector(int id, double x, double y, double z);
GIDPOST_API
int GiD_fWriteVector(GiD_FILE fd, int id, double x, double y, double z);
GIDPOST_API
int GiD_WriteVectorModule(int id, double x, double y, double z, double mod);
GIDPOST_API
int GiD_fWriteVectorModule(GiD_FILE fd, int id,
		           double x, double y, double z, double mod);
GIDPOST_API
int GiD_Write2DMatrix(int id, double Sxx, double Syy, double Sxy);
GIDPOST_API
int GiD_fWrite2DMatrix(GiD_FILE fd, int id, double Sxx, double Syy, double Sxy);
GIDPOST_API
int GiD_Write3DMatrix(int id, double Sxx, double Syy, double Szz,
		      double Sxy, double Syz, double Sxz);
GIDPOST_API
int GiD_fWrite3DMatrix(GiD_FILE fd, int id, double Sxx, double Syy, double Szz,
		       double Sxy, double Syz, double Sxz);
GIDPOST_API
int GiD_WritePlainDefMatrix(int id, double Sxx, double Syy, double Sxy,
		            double Szz);
GIDPOST_API
int GiD_fWritePlainDefMatrix(GiD_FILE fd, int id,
		             double Sxx, double Syy, double Sxy, double Szz);
GIDPOST_API
int GiD_WriteMainMatrix(int id,
		        double Si, double Sii, double Siii,
		        double Vix, double Viy, double Viz,
		        double Viix, double Viiy, double Viiz,
		        double Viiix, double Viiiy, double Viiiz);
GIDPOST_API
int GiD_fWriteMainMatrix(GiD_FILE fd, int id,
		         double Si, double Sii, double Siii,
		         double Vix, double Viy, double Viz,
		         double Viix, double Viiy, double Viiz,
		         double Viiix, double Viiiy, double Viiiz);
GIDPOST_API
int GiD_WriteLocalAxes(int id, double euler_1, double euler_2, double euler_3);
GIDPOST_API
int GiD_fWriteLocalAxes(GiD_FILE fd, int id,
		        double euler_1, double euler_2, double euler_3);
GIDPOST_API
int GiD_WriteComplexScalar( int id, double complex_real, double complex_imag);
GIDPOST_API
int GiD_fWriteComplexScalar( GiD_FILE fd, int id, double complex_real, double complex_imag);
GIDPOST_API
int GiD_WriteComplexVector( int id,
                            double x_real, double x_imag,
                            double y_real, double y_imag,
                            double z_real, double z_imag);
GIDPOST_API
int GiD_fWriteComplexVector( GiD_FILE fd, int id,
                             double x_real, double x_imag,
                             double y_real, double y_imag,
                             double z_real, double z_imag);