external_libraries/gidpost/fortran_module/gidpost_interface.f90


  public :: GiD_File_is_null
  PUBLIC :: GiD_PostInit, GiD_PostDone
  PUBLIC :: GiD_OpenPostMeshFile, GiD_ClosePostMeshFile
  PUBLIC :: GiD_fOpenPostMeshFile, GiD_fOpenPostMeshFile_utf8, GiD_fClosePostMeshFile
  PUBLIC :: GiD_BeginMeshGroup, GiD_EndMeshGroup
  PUBLIC :: GiD_fBeginMeshGroup, GiD_fEndMeshGroup
  PUBLIC :: GiD_BeginMesh, GiD_BeginMeshColor, GiD_EndMesh
  PUBLIC :: GiD_fBeginMesh, GiD_fBeginMeshColor, GiD_fEndMesh
  PUBLIC :: GiD_MeshUnit, GiD_ResultUnit
  PUBLIC :: GiD_fMeshUnit, GiD_fResultUnit
  PUBLIC :: GiD_BeginCoordinates, GiD_EndCoordinates, GiD_WriteCoordinates, GiD_WriteCoordinates2D, GiD_WriteCoordinates3D
  PUBLIC :: GiD_fBeginCoordinates, GiD_fEndCoordinates, GiD_fWriteCoordinates, GiD_fWriteCoordinates2D, GiD_fWriteCoordinates3D
  PUBLIC :: GiD_BeginElements, GiD_EndElements, GiD_WriteElement, GiD_WriteElementMat
  PUBLIC :: GiD_fBeginElements, GiD_fEndElements, GiD_fWriteElement, GiD_fWriteElementMat
  PUBLIC :: GiD_WriteCircle, GiD_WriteCircleMat, GiD_WriteSphere, GiD_WriteSphereMat
  PUBLIC :: GiD_fWriteCircle, GiD_fWriteCircleMat, GiD_fWriteSphere, GiD_fWriteSphereMat
  PUBLIC :: GiD_OpenPostResultFile, GiD_ClosePostResultFile
  PUBLIC :: GiD_fOpenPostResultFile, GiD_fOpenPostResultFile_utf8, GiD_fClosePostResultFile
  PUBLIC :: GiD_BeginGaussPoint, GiD_EndGaussPoint, GiD_WriteGaussPoint2D, GiD_WriteGaussPoint3D
  PUBLIC :: GiD_fBeginGaussPoint, GiD_fEndGaussPoint, GiD_fWriteGaussPoint2D, GiD_fWriteGaussPoint3D
  PUBLIC :: GiD_BeginRangeTable, GiD_EndRangeTable, GiD_WriteMinRange, GiD_WriteRange, GiD_WriteMaxRange
  PUBLIC :: GiD_fBeginRangeTable, GiD_fEndRangeTable, GiD_fWriteMinRange, GiD_fWriteRange, GiD_fWriteMaxRange
  PUBLIC :: GiD_BeginResult, GiD_BeginScalarResult, GiD_BeginVectorResult, GiD_Begin2DMatResult, GiD_Begin3DMatResult
  PUBLIC :: GiD_fBeginResult, GiD_fBeginScalarResult, GiD_fBeginVectorResult, GiD_fBegin2DMatResult, GiD_fBegin3DMatResult
  PUBLIC :: GiD_BeginPDMMatResult, GiD_BeginMainMatResult, GiD_BeginLAResult, GiD_BeginResultHeader
  PUBLIC :: GiD_BeginComplexScalarResult, GiD_BeginComplexVectorResult
  PUBLIC :: GiD_fBeginPDMMatResult, GiD_fBeginMainMatResult, GiD_fBeginLAResult, GiD_fBeginResultHeader
  PUBLIC :: GiD_fBeginComplexScalarResult, GiD_fBeginComplexVectorResult
  PUBLIC :: GiD_ResultComponents, GiD_ScalarComp, GiD_VectorComp, GiD_2DMatrixComp, GiD_3DMatrixComp, GiD_PDMComp
  PUBLIC :: GiD_fResultComponents, GiD_fScalarComp, GiD_fVectorComp, GiD_f2DMatrixComp, GiD_f3DMatrixComp, GiD_fPDMComp
  PUBLIC :: GiD_MainMatrixComp, GiD_LAComponents, GiD_ComplexScalarComp
  PUBLIC :: GiD_fMainMatrixComp, GiD_fLAComponents, GiD_fComplexScalarComp
  PUBLIC :: GiD_BeginResultGroup, GiD_ResultDescription, GiD_ResultValues, GiD_EndResult
  PUBLIC :: GiD_fBeginResultGroup, GiD_fResultDescription, GiD_fResultValues, GiD_fEndResult
  PUBLIC :: GiD_BeginOnMeshGroup, GiD_EndOnMeshGroup
  PUBLIC :: GiD_fBeginOnMeshGroup, GiD_fEndOnMeshGroup
  PUBLIC :: GiD_FlushPostFile
  PUBLIC :: GiD_fFlushPostFile
  PUBLIC :: GiD_WriteScalar, GiD_WriteVector, GiD_Write2DVector, GiD_Write3DVector, GiD_WriteVectorModule, GiD_Write2DMatrix
  PUBLIC :: GiD_fWriteScalar, GiD_fWriteVector, GiD_fWrite2DVector, GiD_fWrite3DVector, GiD_fWriteVectorModule
  PUBLIC :: GiD_fWrite2DMatrix
  PUBLIC :: GiD_Write3DMatrix, GiD_WritePlainDefMatrix, GiD_WriteMainMatrix, GiD_WriteLocalAxes
  PUBLIC :: GiD_WriteComplexScalar, GiD_WriteComplexVector
  PUBLIC :: GiD_fWrite3DMatrix, GiD_fWritePlainDefMatrix, GiD_fWriteMainMatrix, GiD_fWriteLocalAxes
  PUBLIC :: GiD_fWriteComplexScalar, GiD_fWriteComplexVector
  PUBLIC :: OPERATOR(==)
  PUBLIC :: GiD_Int, GiD_Real

!--------------------------------------------------------------------------

CONTAINS

  
    FUNCTION GiD_File_is_null( fd ) RESULT(res)
  
      TYPE(GiD_File), INTENT(IN) :: fd
      LOGICAL :: res
      res = .FALSE.
      if ( fd%file_unit == GID_NO_FILE) then
          res = .TRUE.
      end if
      
    END FUNCTION GiD_File_is_null
    
!--------------------------------------------------------------------------
! REDEFINED SUBROUTINES WITH STRING ARGUMENTS
!--------------------------------------------------------------------------

  SUBROUTINE GiD_OpenPostMeshFile( filename, postmode )

    CHARACTER(LEN=*),   INTENT(IN) :: filename
    TYPE(GiD_PostMode), INTENT(IN) :: postmode

    CHARACTER(1,KIND=C_CHAR) :: filename_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_OpenPostMeshFile_cpp( filename_cpp, postmode ) BIND(C,NAME='GiD_OpenPostMeshFile')
        IMPORT:: GiD_PostMode, C_CHAR
        CHARACTER(1,KIND=C_CHAR),  INTENT(IN) :: filename_cpp(1)
        TYPE(GiD_PostMode), VALUE, INTENT(IN) :: postmode
      END SUBROUTINE GiD_OpenPostMeshFile_cpp
    END INTERFACE

    filename_cpp = C_STRING(filename)
    CALL GiD_OpenPostMeshFile_cpp( filename_cpp, postmode )

  END SUBROUTINE GiD_OpenPostMeshFile

  
  
  FUNCTION GiD_fOpenPostMeshFile( filename, postmode ) RESULT(fd)

    CHARACTER(LEN=*),   INTENT(IN) :: filename
    TYPE(GiD_PostMode), INTENT(IN) :: postmode
    TYPE(GiD_File) :: fd

    CHARACTER(1,KIND=C_CHAR) :: filename_cpp(MAX_STRING_LEN)

    INTERFACE
      INTEGER(C_INT) FUNCTION GiD_fOpenPostMeshFile_cpp( filename_cpp, postmode ) BIND(C,NAME='GiD_fOpenPostMeshFile')
        IMPORT:: GiD_PostMode, C_CHAR, GiD_File, C_INT
        CHARACTER(1,KIND=C_CHAR),  INTENT(IN) :: filename_cpp(1)
        TYPE(GiD_PostMode), VALUE, INTENT(IN) :: postmode
      END FUNCTION GiD_fOpenPostMeshFile_cpp
    END INTERFACE

    filename_cpp = C_STRING(filename)
    fd%file_unit = GiD_fOpenPostMeshFile_cpp( filename_cpp, postmode )

  END FUNCTION GiD_fOpenPostMeshFile

  FUNCTION GiD_fOpenPostMeshFile_utf8( filename, postmode ) RESULT(fd)

    CHARACTER(LEN=*),   INTENT(IN) :: filename
    TYPE(GiD_PostMode), INTENT(IN) :: postmode
    TYPE(GiD_File) :: fd

    CHARACTER(1,KIND=C_CHAR) :: filename_cpp(MAX_STRING_LEN)

    INTERFACE
      INTEGER(C_INT) FUNCTION GiD_fOpenPostMeshFile_utf8_cpp( filename_cpp, postmode ) BIND(C,NAME='GiD_fOpenPostMeshFile_utf8')
        IMPORT:: GiD_PostMode, C_CHAR, GiD_File, C_INT
        CHARACTER(1,KIND=C_CHAR),  INTENT(IN) :: filename_cpp(1)
        TYPE(GiD_PostMode), VALUE, INTENT(IN) :: postmode
      END FUNCTION GiD_fOpenPostMeshFile_utf8_cpp
    END INTERFACE

    filename_cpp = C_STRING(filename)
    fd%file_unit = GiD_fOpenPostMeshFile_utf8_cpp( filename_cpp, postmode )

  END FUNCTION GiD_fOpenPostMeshFile_utf8

!--------------------------------------------------------------------------
  
  SUBROUTINE GiD_BeginMeshGroup( label )

    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_BeginMeshGroup_cpp( label_cpp ) BIND(C,NAME='GiD_BeginMeshGroup')
        IMPORT :: C_CHAR
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_BeginMeshGroup_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_BeginMeshGroup_cpp( label_cpp )

  END SUBROUTINE GiD_BeginMeshGroup
  
  SUBROUTINE GiD_fBeginMeshGroup( fd, label )

    TYPE(GiD_File),   INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: label

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fBeginMeshGroup_cpp( fd, label_cpp ) BIND(C,NAME='GiD_fBeginMeshGroup')
        IMPORT :: C_CHAR, GiD_File
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: label_cpp(1)
      END SUBROUTINE GiD_fBeginMeshGroup_cpp
    END INTERFACE

    label_cpp = C_STRING(label)
    CALL GiD_fBeginMeshGroup_cpp( fd, label_cpp )

  END SUBROUTINE GiD_fBeginMeshGroup
  
!--------------------------------------------------------------------------
   
  SUBROUTINE GiD_MeshUnit( unit_name )

    CHARACTER(LEN=*), INTENT(IN) :: unit_name
    
    CHARACTER(1,KIND=C_CHAR) :: unit_name_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_MeshUnit_cpp( unit_name_cpp ) BIND(C,NAME='GiD_MeshUnit')      
        IMPORT :: C_CHAR
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: unit_name_cpp(1)
      END SUBROUTINE GiD_MeshUnit_cpp
    END INTERFACE

    unit_name_cpp = C_STRING(unit_name)
    call GiD_MeshUnit_cpp(unit_name_cpp)

  END SUBROUTINE GiD_MeshUnit

  SUBROUTINE GiD_fMeshUnit( fd, unit_name )

    TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    CHARACTER(LEN=*), INTENT(IN) :: unit_name     
    
    CHARACTER(1,KIND=C_CHAR) :: unit_name_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fMeshUnit_cpp( fd, unit_name_cpp ) BIND(C,NAME='GiD_fMeshUnit')      
        IMPORT :: GiD_File, C_CHAR
        TYPE(GiD_File), VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: unit_name_cpp(1)
      END SUBROUTINE GiD_fMeshUnit_cpp
    END INTERFACE

    unit_name_cpp = C_STRING(unit_name)
    call GiD_fMeshUnit_cpp(fd,unit_name_cpp)

  END SUBROUTINE GiD_fMeshUnit

!--------------------------------------------------------------------------

  SUBROUTINE GiD_BeginMesh(label,dim,elemtype,nnode)

    CHARACTER(LEN=*),      INTENT(IN) :: label
    TYPE(GiD_Dimension),   INTENT(IN) :: dim
    TYPE(GiD_ElementType), INTENT(IN) :: elemtype
    INTEGER(C_INT),        INTENT(IN) :: nnode

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_BeginMesh_cpp(label_cpp,dim,elemtype,nnode) BIND(C,NAME='GiD_BeginMesh')
        IMPORT:: GiD_Dimension, GiD_ElementType, C_INT, C_CHAR
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: label_cpp(1)
        TYPE(GiD_Dimension),   VALUE, INTENT(IN) :: dim
        TYPE(GiD_ElementType), VALUE, INTENT(IN) :: elemtype
        INTEGER(C_INT),        VALUE, INTENT(IN) :: nnode
      END SUBROUTINE GiD_BeginMesh_cpp
    END INTERFACE
  
    label_cpp = C_STRING(label)
    CALL GiD_BeginMesh_cpp(label_cpp,dim,elemtype,nnode)

  END SUBROUTINE GiD_BeginMesh
    
  SUBROUTINE GiD_fBeginMesh(fd,label,dim,elemtype,nnode)

    TYPE(GiD_File),        INTENT(IN) :: fd
    CHARACTER(LEN=*),      INTENT(IN) :: label
    TYPE(GiD_Dimension),   INTENT(IN) :: dim
    TYPE(GiD_ElementType), INTENT(IN) :: elemtype
    INTEGER(C_INT),        INTENT(IN) :: nnode

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_fBeginMesh_cpp(fd,label_cpp,dim,elemtype,nnode) BIND(C,NAME='GiD_fBeginMesh')
        IMPORT:: GiD_Dimension, GiD_ElementType, C_INT, C_CHAR, GiD_File
        TYPE(GiD_File),        VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: label_cpp(1)
        TYPE(GiD_Dimension),   VALUE, INTENT(IN) :: dim
        TYPE(GiD_ElementType), VALUE, INTENT(IN) :: elemtype
        INTEGER(C_INT),        VALUE, INTENT(IN) :: nnode
      END SUBROUTINE GiD_fBeginMesh_cpp
    END INTERFACE
  
    label_cpp = C_STRING(label)
    CALL GiD_fBeginMesh_cpp(fd,label_cpp,dim,elemtype,nnode)

  END SUBROUTINE GiD_fBeginMesh
  
!--------------------------------------------------------------------------
    
  SUBROUTINE GiD_BeginMeshColor(label,dim,elemtype,nnode,red,green,blue)

    CHARACTER(LEN=*),      INTENT(IN) :: label
    TYPE(GiD_Dimension),   INTENT(IN) :: dim
    TYPE(GiD_ElementType), INTENT(IN) :: elemtype
    INTEGER(C_INT),        INTENT(IN) :: nnode
    REAL(C_DOUBLE),        INTENT(IN) :: red, green, blue

    CHARACTER(1,KIND=C_CHAR) :: label_cpp(MAX_STRING_LEN)

    INTERFACE
      SUBROUTINE GiD_BeginMeshColor_cpp(label_cpp,dim,elemtype,nnode,red,green,blue) BIND(C,NAME='GiD_BeginMeshColor')
        IMPORT:: C_DOUBLE, GiD_Dimension, GiD_ElementType, C_INT, C_CHAR
        CHARACTER(1,KIND=C_CHAR),     INTENT(IN) :: label_cpp(1)
        TYPE(GiD_Dimension),   VALUE, INTENT(IN) :: dim
        TYPE(GiD_ElementType), VALUE, INTENT(IN) :: elemtype
        INTEGER(C_INT),        VALUE, INTENT(IN) :: nnode
        REAL(C_DOUBLE),        VALUE, INTENT(IN) :: red, green, blue
      END SUBROUTINE GiD_BeginMeshColor_cpp
    END INTERFACE
